--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -35,6 +35,6 @@ else
                     <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
                 </tr>
             }
-        </tbody>0
+        </tbody>
     </table>
 }
